Desenvolvimento da API
Related Work Items: #816

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -240,6 +240,7 @@
     <Compile Include="Controllers\Clientes\V1\Tipos\GetTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PatchTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PostTiposClienteController.cs" />
+    <Compile Include="Controllers\Comissionados\V1\DeleteComissionadosController.cs" />
     <Compile Include="Controllers\Datas\V1\Feriados\FeriadosController.cs" />
     <Compile Include="Controllers\Datas\V1\Feriados\DeleteFeriadosController.cs" />
     <Compile Include="Controllers\Datas\V1\Feriados\GetFeriadosController.cs" />
@@ -383,6 +384,7 @@
     <Compile Include="Helper\Clientes\Tipos\TraducaoOrdenacaoListaTipos.cs" />
     <Compile Include="Helper\Datas\Feriados\ConverterCadastroAtualizacaoParaFeriado.cs" />
     <Compile Include="Helper\Datas\Feriados\TraducaoOrdenacaoListaFeriados.cs" />
+    <Compile Include="Helper\Comissionados\TraducaoOrdenacaoListaComissionados.cs" />
     <Compile Include="Helper\Veiculos\TraducaoOrdenacaoListaVeiculos.cs" />
     <Compile Include="Helper\Transportadores\TraducaoOrdenacaoListaTransportadores.cs" />
     <Compile Include="Helper\Produtos\CoresVidro\ConverterCadastroAtualizacaoParaCorVidro.cs" />
@@ -447,9 +449,13 @@
     <Compile Include="Models\Clientes\Tipos\Lista\FiltroDto.cs" />
     <Compile Include="Models\Clientes\Tipos\Lista\ListaDto.cs" />
     <Compile Include="Models\Clientes\Tipos\Lista\PermissoesDto.cs" />
+    <Compile Include="Models\Comissionados\Lista\TelefonesDto.cs" />
     <Compile Include="Models\Datas\Feriados\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Datas\Feriados\Lista\FiltroDto.cs" />
     <Compile Include="Models\Datas\Feriados\Lista\ListaDto.cs" />
+    <Compile Include="Models\Comissionados\Configuracoes\ListaDto.cs" />
+    <Compile Include="Models\Comissionados\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Comissionados\Lista\ListaDto.cs" />
     <Compile Include="Models\Veiculos\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Veiculos\Lista\FiltroDto.cs" />
     <Compile Include="Models\Veiculos\Lista\ListaDto.cs" />
