--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -240,12 +240,18 @@
     <Compile Include="Controllers\Clientes\V1\Tipos\GetTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PatchTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PostTiposClienteController.cs" />
+    <Compile Include="Controllers\Fornecedores\V1\FornecedoresController.cs" />
+    <Compile Include="Controllers\Fornecedores\V1\DeleteFornecedoresController.cs" />
+    <Compile Include="Controllers\Fornecedores\V1\GetFornecedoresController.cs" />
     <Compile Include="Controllers\Comissionados\V1\DeleteComissionadosController.cs" />
     <Compile Include="Controllers\Datas\V1\Feriados\FeriadosController.cs" />
     <Compile Include="Controllers\Datas\V1\Feriados\DeleteFeriadosController.cs" />
     <Compile Include="Controllers\Datas\V1\Feriados\GetFeriadosController.cs" />
     <Compile Include="Controllers\Datas\V1\Feriados\PatchFeriadosController.cs" />
     <Compile Include="Controllers\Datas\V1\Feriados\PostFeriadosController.cs" />
+    <Compile Include="Controllers\Fornecedores\V1\PostFornecedoresController.cs" />
+    <Compile Include="Controllers\PlanosConta\V1\GetPlanosContaController.cs" />
+    <Compile Include="Controllers\PlanosConta\V1\PlanosContaController.cs" />
     <Compile Include="Controllers\Produtos\V1\CoresAluminio\DeleteCoresAluminioController.cs" />
     <Compile Include="Controllers\Produtos\V1\CoresAluminio\PatchCoresAluminioController.cs" />
     <Compile Include="Controllers\Produtos\V1\CoresAluminio\PostCoresAluminioController.cs" />
@@ -456,6 +462,7 @@
     <Compile Include="Models\Comissionados\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Comissionados\Lista\FiltroDto.cs" />
     <Compile Include="Models\Comissionados\Lista\ListaDto.cs" />
+    <Compile Include="Models\PlanosConta\Lista\TipoEnum.cs" />
     <Compile Include="Models\Veiculos\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Veiculos\Lista\FiltroDto.cs" />
     <Compile Include="Models\Veiculos\Lista\ListaDto.cs" />
