--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Atributos\CacheFilterAttribute.cs" />
     <Compile Include="Controllers\Boletos\V1\GetBoletosController.cs" />
     <Compile Include="Controllers\Boletos\V1\BoletosController.cs" />
+    <Compile Include="Controllers\Funcionarios\V1\DeleteFuncionariosController.cs" />
     <Compile Include="Controllers\Produtos\V1\CoresFerragem\DeleteCoresFerragemController.cs" />
     <Compile Include="Controllers\Produtos\V1\CoresFerragem\PatchCoresFerragemController.cs" />
     <Compile Include="Controllers\Produtos\V1\CoresFerragem\PostCoresFerragemController.cs" />
@@ -359,6 +360,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\Funcionarios\TraducaoOrdenacaoListaFuncionarios.cs" />
+    <Compile Include="Helper\Imagens\Estrategias\Exibicao\ExibicaoFuncionarioStrategy.cs" />
     <Compile Include="Helper\Produtos\CoresFerragem\ConverterCadastroAtualizacaoParaCorFerragem.cs" />
     <Compile Include="Helper\Produtos\CoresFerragem\TraducaoOrdenacaoListaTraducaoOrdenacaoListaCoresFerragem.cs" />
     <Compile Include="Helper\Sinais\TraducaoOrdenacaoListaSinais.cs" />
@@ -413,6 +416,12 @@
     <Compile Include="Helper\Respostas\SemConteudo.cs" />
     <Compile Include="Helper\Respostas\CriadoDto.cs" />
     <Compile Include="Helper\Respostas\MensagemDto.cs" />
+    <Compile Include="Models\Funcionarios\Configuracoes\ListaDto.cs" />
+    <Compile Include="Models\Funcionarios\Lista\ContatosDto.cs" />
+    <Compile Include="Models\Funcionarios\Lista\DocumentosDto.cs" />
+    <Compile Include="Models\Funcionarios\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Funcionarios\Lista\ListaDto.cs" />
+    <Compile Include="Models\Funcionarios\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Produtos\CoresFerragem\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Produtos\CoresFerragem\Lista\FiltroDto.cs" />
     <Compile Include="Models\Produtos\CoresFerragem\Lista\ListaDto.cs" />
