--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -477,6 +477,9 @@
     <Content Include="Cadastros\CadGrupoCliente.aspx" />
     <Content Include="Scripts\jquery\jquery-ajuste.js" />
     <Content Include="Vue\CoresFerragem\Componentes\LstCoresFerragem.js" />
+    <Content Include="Vue\Funcionarios\Componentes\LstFuncionarios.Filtro.js" />
+    <Content Include="Vue\Funcionarios\Componentes\LstFuncionarios.js" />
+    <Content Include="Vue\Funcionarios\Templates\LstFuncionarios.Filtro.html" />
     <Content Include="Vue\Sinais\Componentes\LstSinais.Filtro.js" />
     <Content Include="Vue\Sinais\Componentes\LstSinais.js" />
     <Content Include="Vue\Sinais\Templates\LstSinais.Filtro.html" />
