#848 Criação do método de consulta de produção na API

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -385,6 +385,7 @@
     <Compile Include="Helper\Datas\Feriados\ConverterCadastroAtualizacaoParaFeriado.cs" />
     <Compile Include="Helper\Datas\Feriados\TraducaoOrdenacaoListaFeriados.cs" />
     <Compile Include="Helper\Comissionados\TraducaoOrdenacaoListaComissionados.cs" />
+    <Compile Include="Helper\Producao\TraducaoOrdenacaoListaProducao.cs" />
     <Compile Include="Helper\Veiculos\TraducaoOrdenacaoListaVeiculos.cs" />
     <Compile Include="Helper\Transportadores\TraducaoOrdenacaoListaTransportadores.cs" />
     <Compile Include="Helper\Produtos\CoresVidro\ConverterCadastroAtualizacaoParaCorVidro.cs" />
@@ -456,7 +457,23 @@
     <Compile Include="Models\Comissionados\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Comissionados\Lista\FiltroDto.cs" />
     <Compile Include="Models\Comissionados\Lista\ListaDto.cs" />
+    <Compile Include="Models\Producao\V1\Lista\ChapaVidroDto.cs" />
+    <Compile Include="Models\Producao\V1\Lista\DataEntregaDto.cs" />
     <Compile Include="Models\Producao\V1\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Producao\V1\Lista\FiltroExtensions.cs" />
+    <Compile Include="Models\Producao\V1\Lista\LeituraDto.cs" />
+    <Compile Include="Models\Producao\V1\Lista\ListaDto.cs" />
+    <Compile Include="Models\Producao\V1\Lista\PedidoDto.cs" />
+    <Compile Include="Models\Producao\V1\Lista\ImagemPecaDto.cs" />
+    <Compile Include="Models\Producao\V1\Lista\PerdaDto.cs" />
+    <Compile Include="Models\Producao\V1\Lista\ProdutoPedidoDto.cs" />
+    <Compile Include="Models\Producao\V1\Lista\SetorDto.cs" />
+    <Compile Include="Models\Producao\V1\Lista\SituacaoProducaoDto.cs" />
+    <Compile Include="Models\Producao\V1\Lista\TipoFastDeliveryEnum.cs" />
+    <Compile Include="Models\Producao\V1\Lista\TipoPecaExibirEnum.cs" />
+    <Compile Include="Models\Producao\V1\Lista\TipoProdutoComposicaoEnum.cs" />
+    <Compile Include="Models\Producao\V1\Lista\SituacaoProducaoEnum.cs" />
+    <Compile Include="Models\Producao\V1\Lista\TipoSituacaoProducaoEnum.cs" />
     <Compile Include="Models\Veiculos\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Veiculos\Lista\FiltroDto.cs" />
     <Compile Include="Models\Veiculos\Lista\ListaDto.cs" />
