--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -481,6 +481,9 @@
     <Content Include="Vue\Comissionados\Componentes\LstComissionados.Filtro.js" />
     <Content Include="Vue\Comissionados\Componentes\LstComissionados.js" />
     <Content Include="Vue\Comissionados\Templates\LstComissionados.Filtro.html" />
+    <Content Include="Vue\Producao\Componentes\LstProducao.Filtros.js" />
+    <Content Include="Vue\Producao\Componentes\LstProducao.js" />
+    <Content Include="Vue\Producao\Templates\LstProducao.Filtros.html" />
     <Content Include="Vue\Veiculos\Componentes\LstVeiculos.js" />
     <Content Include="Vue\Transportadores\Componentes\LstTransportadores.Filtro.js" />
     <Content Include="Vue\Transportadores\Componentes\LstTransportadores.js" />
