Correção de estrutura de Refatoração da tela de listagem de sugestão de clientes

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -235,9 +235,9 @@
     <Compile Include="Atributos\CacheFilterAttribute.cs" />
     <Compile Include="Controllers\Boletos\V1\GetBoletosController.cs" />
     <Compile Include="Controllers\Boletos\V1\BoletosController.cs" />
-    <Compile Include="Controllers\Clientes\V1\GetSugestaoClienteController.cs" />
-    <Compile Include="Controllers\Clientes\V1\PostSugestaoClienteController.cs" />
-    <Compile Include="Controllers\Clientes\V1\SugestaoClienteController.cs" />
+    <Compile Include="Controllers\Clientes\V1\SugestoesCliente\GetSugestaoClienteController.cs" />
+    <Compile Include="Controllers\Clientes\V1\SugestoesCliente\PostSugestaoClienteController.cs" />
+    <Compile Include="Controllers\Clientes\V1\SugestoesCliente\SugestaoClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\TiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\DeleteTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\GetTiposClienteController.cs" />
