--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -4507,6 +4507,7 @@
     <Content Include="Web References\wsPSVRSCTeStatusServico\CteStatusServico.disco" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Configuracoes\IntegracaoConfig\" />
     <Folder Include="Configuracoes\RelatorioConfig\" />
     <Folder Include="Rentabilidade\DAL\" />
   </ItemGroup>
