--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -618,5 +618,19 @@
       </exports>
     </part>
 
+    <part type="Glass.Integracao.Khan.IntegradorKhan, Glass.Integracao.Khan" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractType="Glass.Integracao.IIntegrador, Glass.Integracao" />
+      </exports>
+    </part>
+
+    <part type="Glass.Integracao.Khan.IntegradorKhan, Glass.Integracao.Khan" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractType="Glass.Integracao.IIntegrador, Glass.Integracao" />
+      </exports>
+    </part>
+    
   </parts>
 </mef.configuration>
